resolved spacing issues

--- a/src/components/Association/Association.css
+++ b/src/components/Association/Association.css
@@ -8,9 +8,11 @@
   box-shadow: 0px 0px 0px 0.2px white;
   padding: 20px;
   gap: 20px;
+  font-family: "Teko", sans-serif;
 }
 .association_wrapper > h2 {
   color: var(--secondary);
+font-size: 3.5vw;
 }
 .association_inner_wrapper {
   max-width: 1300px;
