--- a/src/components/Theme/Theme.css
+++ b/src/components/Theme/Theme.css
@@ -32,6 +32,8 @@
 .themeTitle{
   font-size: 7vw;
   font-weight: 600;
+  margin-top: -15px;
+  margin-bottom: 20px;
 }
 .theme_problem_wrapper {
   position: relative;
@@ -52,10 +54,10 @@
 }
 .absoluteSpan {
   position: absolute;
-  bottom: 3px;
-  right: 3px;
+  bottom: 20px;
+  right: 20px;
   color: red;
-  font-weight: 900;
+  font-weight: 600;
   font-size: 12px;
 }
 .problemAbsoluteDiv {
@@ -64,7 +66,7 @@
   left: 0;
   bottom: 0;
   right: 0;
-  background: var(--primary-shade-two);
+  background: var(--primary-shade-one);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(11px);
   -webkit-backdrop-filter: blur(11px);
@@ -77,7 +79,8 @@
   font-weight: bolder;
   font-size: 20px;
   text-align: center;
-  gap:10px;
+  gap:30px;
+  padding:20px;
 }
 
 @media all and (max-width: 1000px) {
